--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lottie": "^1.2.3",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.6",
     "react-scripts": "3.4.1",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
